config/demo/portals/cloud-portal/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-portal
spec:
  replicas: 1
  template:
    spec:
      hostAliases:
        - ip: "172.18.0.2"
          hostnames:
            - cloud.localhost
      containers:
        - name: cloud-portal
          imagePullPolicy: IfNotPresent
